# eml-witness

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/eml_witness/: __init__.py  core.py
tests/: test_shim.py  test_witness.py
