[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-witness"
version = "0.3.0"
description = "DEPRECATED — consolidated into eml-cost[witness]. See README."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PROPRIETARY-PRE-RELEASE" }
authors = [
    { name = "Monogate Research" },
]
keywords = ["eml", "deprecated"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "eml-cost[witness]>=0.15.0",
]

[project.urls]
Homepage = "https://monogate.org"
Repository = "https://github.com/agent-maestro/eml-witness"
Issues = "https://github.com/agent-maestro/eml-witness/issues"

[tool.setuptools.packages.find]
where = ["src"]
